--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ URL_HOST=http://localhost:7070
 
 #database configuration
 DBUSER=root
-DBPWD=
+DBPWD=linkers
 DBHOST=localhost
 DBNAME=courier_management
 
