--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ URL_HOST=http://localhost:80
 
 #database configuration
 DBUSER=root
-DBPWD=linkers
+DBPWD=xyannix
 DBHOST=localhost
 DBNAME=courier_management
 
