--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 #URL HOSTING
-URL_HOST=http://localhost:8080
+URL_HOST=http://localhost:80
 
 #database configuration
 DBUSER=root
-DBPWD=linkers1bs
+DBPWD=
 DBHOST=localhost
 DBNAME=courier_management
 
