--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
+
 #URL HOSTING
-URL_HOST=http://localhost:80
+URL_HOST=https://pasuyo-delivery.great-site.net
 
 #database configuration
-DBUSER=root
-DBPWD=
-DBHOST=localhost
-DBNAME=pasuyo_management
+DBPORT=3306
+DBUSER=epiz_32932003
+DBPWD=Ef75oYN1ff
+DBHOST=sql200.epizy.com
+DBNAME=epiz_32932003_courier_management
 
 
 
